test/fixtures/diagnostics/type-checker/positive/multiplicative-compound-assignment/input.tysh
namespace Samples.TypeChecker.MultiplicativeCompoundAssignment

fun adjustInt(value: int, factor: short): int {
  let mut result = value
  result *= factor
  result /= 2
  result %= 5
  result
}

fun adjustLong(value: long, divisor: int): long {
  let mut result = value
  result *= 3
  result /= divisor
  result %= 7
  result
}
