test/fixtures/diagnostics/type-checker/negative/extension-property-helper-name-collisions/input.tysh
namespace Samples.Extensions.HelperConflicts

public extension string text {
  public fun GetWordCount(text: string): int =
    text.Length

  public let WordCount: int = text.Length
}
